--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,9 @@ name: Test
 on:
   - pull_request
 
+env:
+  BEAKER_HYPERVISOR: docker
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,3 +30,5 @@ jobs:
           bundler-cache: true
       - name: Verify gem builds
         run: bundle exec gem build beaker-rspec.gemspec
+      - name: Run acceptance tests
+        run: bundle exec rake beaker
