--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install Ruby ${{ matrix.ruby }}
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: "3.1"
+          ruby-version: "3.2"
           bundler-cache: true
       - name: Run Rubocop
         run: bundle exec rake rubocop
@@ -31,6 +31,7 @@ jobs:
           - "2.7"
           - "3.0"
           - "3.1"
+          - "3.2"
     name: Ruby ${{ matrix.ruby }}
     steps:
       - uses: actions/checkout@v3
@@ -43,3 +44,12 @@ jobs:
         run: gem build beaker-rspec.gemspec
       - name: Run acceptance tests
         run: bundle exec rake beaker
+
+  tests:
+    needs:
+      - rubocop
+      - build
+    runs-on: ubuntu-latest
+    name: Test suite
+    steps:
+      - run: echo Test suite completed
