--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,7 +41,7 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
       - name: Verify gem builds
-        run: gem build beaker-rspec.gemspec
+        run: gem build --strict --verbose *.gemspec
       - name: Run acceptance tests
         run: bundle exec rake beaker
 
